--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "resend": "^3.3.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
